# mdp

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
assets/: github.css  template.html  template_sidebar.html
review/: claudecode_pr62-64.md
src/: files.rs  lib.rs  main.rs  parser.rs  server.rs  watcher.rs
src/renderer/: html.rs  mod.rs  terminal.rs
