[package]
name = "mdp"
version = "0.1.0"
edition = "2021"
description = "A rich Markdown previewer for the terminal and browser"
authors = ["Your Name"]
license = "MIT"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Markdown
pulldown-cmark = { version = "0.10", features = ["simd"] }

# Syntax highlighting
syntect = "5"

# Terminal
crossterm = "0.27"
textwrap = "0.16"

# Unicode width for proper alignment
unicode-width = "0.1"

# TTY detection
atty = "0.2"

# HTTP server for browser mode
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
tower-http = { version = "0.5", features = ["fs", "cors"] }

# Browser opening
open = "5"

# HTML escaping
html-escape = "0.2"

# File watching
notify = "6"
notify-debouncer-mini = "0.4"

# Directory traversal
walkdir = "2"

# JSON serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Regex for link processing
regex = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
